test/error/MethodCallNoThrows.fu
public static class Test
{
	static void Foo()
	{
		Bar(); //ERROR: Method marked 'throws' called from a method not marked 'throws'
	}

	static void Bar() throws Exception
	{
		throw Exception("bar");
	}

	public static bool Run()
	{
		return true;
	}
}
